--- a/AntiFlagV2/AntiFlagV2/AntiFlagV2.csproj
+++ b/AntiFlagV2/AntiFlagV2/AntiFlagV2.csproj
@@ -23,4 +23,10 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Binaries\Volumeid64.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
