--- a/AntiFlagV2/AntiFlagV2/AntiFlagV2.csproj
+++ b/AntiFlagV2/AntiFlagV2/AntiFlagV2.csproj
@@ -11,6 +11,10 @@
 	  <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <DefineConstants>_WINDOWS</DefineConstants>
+  </PropertyGroup>
+		
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
