--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 mono_crash.*
 
 # Build results
+[Pp]ublish/
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -82,6 +83,7 @@ StyleCopReport.xml
 *.pgc
 *.pgd
 *.rsp
+*.exe 
 *.sbr
 *.tlb
 *.tli
