--- a/AntiFlagV2/AntiFlagV2/AntiFlagV2.csproj
+++ b/AntiFlagV2/AntiFlagV2/AntiFlagV2.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="SXAntiDebug">
+      <HintPath>..\..\..\SXAntiDebug\SXAntiDebug\SXAntiDebug\bin\Release\net5.0-windows\SXAntiDebug.dll</HintPath>
+    </Reference>
     <Reference Include="SXAuth">
       <HintPath>..\..\..\SXAuth1.0\SXAuth\SXAuth\bin\Release\net5.0\SXAuth.dll</HintPath>
     </Reference>
