--- a/AntiFlagV2/AntiFlagV2/AntiFlagV2.csproj
+++ b/AntiFlagV2/AntiFlagV2/AntiFlagV2.csproj
@@ -19,6 +19,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Obfuscar" Version="2.2.31">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Management" Version="5.0.0" />
   </ItemGroup>
 
@@ -36,5 +40,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="if $(ConfigurationName) == Release &quot;$(Obfuscar)&quot; obfuscar.xml&#xD;&#xA;" />
+  </Target>
 
 </Project>
